tests/fixtures/invalid/str_mul_dict.py
# Cannot multiply Str and Dict[str, int]
x: str = "hello" * {"a": 1}
